# ros_video_recorder

./: CMakeLists.txt  README.md  package.xml
config/: default.yaml  from_below.yaml
launch/: record_video.launch  start_camera.launch  video_recorder.launch  view_camera.launch
scripts/: video_recorder_server.py
